--- a/_doc/md/doc_00-11.md
+++ b/_doc/md/doc_00-11.md
@@ -4,6 +4,7 @@ npm i -g @nestjs/cli
 nest -v
 
 nest new nest-demo
+nest new .
 
 npm install uuid
 npm install dotenv
@@ -59,3 +60,4 @@ http://localhost:3000/logout
 #11
 npm install --save @nestjs/swagger
 
+```
