--- a/_doc/md/doc_00-11.md
+++ b/_doc/md/doc_00-11.md
@@ -20,6 +20,7 @@ npm run build
 npm run migration:generate src/migrations/initial
 npm run build
 npm run migration:run
+npm run migration:revert
 
 npm run start:dev
 
